syntax = "proto3";

package Account;

service AccountService { 
  rpc list (EmptyRequest) returns (FindAllAccountsResponse);
  rpc byId (ByIdRequest) returns (FindOneAccountResponse);
  rpc byUserId (ByUserIdRequest) returns (FindOneAccountResponse);
  rpc create (CreateAccountRequest) returns (CreateAccountResponse);
}

message CreateAccountRequest {
  string user_id = 2;
}
message CreateAccountResponse {
  int32 id = 1;
  string address = 2;
}

message ByIdRequest {
  int32 id = 1;
}

message ByUserIdRequest {
  string user_id = 1;
}

message FindAllAccountsResponse {
  repeated FindOneAccountResponse accounts = 1;
}
message FindOneAccountResponse {
  int32 id = 1;
  string user_id = 2;
  string address = 3;
}

message EmptyRequest {}
